2007-11-22	Chris Johns <chrisj@rtems.org>

	* m68k/mcf5235/include/mcf5235.h: Remove '/' from define label.
	
2007-06-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Now use the m68k memcpy and memset recently added to
	newlib instead of our own.
	* shared/misc/memcpy.c: Removed.

2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* mcf5272/clock/ckinit.c, mcf5272/include/mcf5272.h,
	mcf5272/timer/timer.c, mcf5272/timer/timerisr.S: Correct license URL
	and/or fix mistake in copyright notice. Both of these mistakes appear
	to be from code submitted after these changes were made previously.

2006-12-14	Till Straumann <strauman@slac.stanford.edu>

	* m68k/mcf5282/include/mcf5282.h: added __may_alias__
	attribute to low-level scalar type definitions and
	removed intermediate (void*) cast.

2006-12-14	Till Straumann <strauman@slac.stanford.edu>

	* m68k/mcf5282/include/mcf5282.h: fixed wrong value
	of MCF5282_QSPI_QDLYR_SPE.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-09-11	Chris Johns <chrisj@rtems.org>

	* m68k/mcf5282/include/mcf5282.h: Remove extra CRLF.
	
2006-05-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Use RTEMS_AMPOLISH3.

2005-07-27	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken patch to mcf5235.

2005-07-08	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Eliminate duplicate entry for include_mcf5235... .

2005-06-17	Mike Bertosh <mbertosh@motioncontrol.org>

	* ChangeLog, Makefile.am, configure.ac, preinstall.am: Addition of
	mcf5235 support.
	* mcf5235/include/mcf5235.h: New file.

2005-06-17	Mike Bertosh <mbertosh@motioncontrol.org>

	* Makefile.am, configure.ac, preinstall.am: Addition of mcf5235
	support.

2005-05-11	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Merge-in mcf5282/Makefile.am.