@@ -1,3 +1,9 @@
+2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* mcf5206/clock/ckinit.c, mcf5272/clock/ckinit.c: Eliminate copies of
+	the Configuration Table. Use the RTEMS provided accessor macros to
+	obtain configuration fields.
+
 2007-11-22	Chris Johns <chrisj@rtems.org>
 
 	* m68k/mcf5235/include/mcf5235.h: Remove '/' from define label.
